syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: /* empty */
   14       | ID

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | VarDec LB error RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error RC

   27 StmtList: /* empty */
   28         | Stmt StmtList

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | error SEMI

   36 DefList: /* empty */
   37        | Def DefList

   38 Def: Specifier DecList SEMI

   39 DecList: Dec
   40        | Dec COMMA DecList

   41 Dec: VarDec
   42    | VarDec ASSIGNOP Exp

   43 Exp: Exp ASSIGNOP Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp RELOP Exp
   47    | Exp PLUS Exp
   48    | Exp MINUS Exp
   49    | Exp MUL Exp
   50    | Exp DIV Exp
   51    | LP Exp RP
   52    | MINUS Exp
   53    | NOT Exp
   54    | ID LP Args RP
   55    | ID LP RP
   56    | Exp LB Exp RB
   57    | Exp DOT ID
   58    | ID
   59    | INT
   60    | FLOAT
   61    | error RP
   62    | Exp LB error RB

   63 Args: Exp COMMA Args
   64     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 18 21 26 35 61 62
INT (258) 17 59
FLOAT (259) 60
ID (260) 14 15 16 19 20 54 55 57 58
PLUS (261) 47
MINUS (262) 48 52
MUL (263) 49
DIV (264) 50
SEMI (265) 4 5 29 31 35 38
COMMA (266) 8 22 40 63
TYPE (267) 9
LP (268) 19 20 32 33 34 51 54 55
RP (269) 19 20 21 32 33 34 51 54 55 61
LB (270) 17 18 56 62
RB (271) 17 18 56 62
LC (272) 11 25
RC (273) 11 25 26
ASSIGNOP (274) 42 43
RELOP (275) 46
AND (276) 44
OR (277) 45
DOT (278) 57
NOT (279) 53
STRUCT (280) 11 12
RETURN (281) 31
IF (282) 32 33
ELSE (283) 33
WHILE (284) 34
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 3
ExtDef (34)
    on left: 4 5 6, on right: 3
ExtDecList (35)
    on left: 7 8, on right: 4 8
Specifier (36)
    on left: 9 10, on right: 4 5 6 24 38
StructSpecifier (37)
    on left: 11 12, on right: 10
OptTag (38)
    on left: 13 14, on right: 11
Tag (39)
    on left: 15, on right: 12
VarDec (40)
    on left: 16 17 18, on right: 7 8 17 18 24 41 42
FunDec (41)
    on left: 19 20 21, on right: 6
VarList (42)
    on left: 22 23, on right: 19 22
ParamDec (43)
    on left: 24, on right: 22 23
CompSt (44)
    on left: 25 26, on right: 6 30
StmtList (45)
    on left: 27 28, on right: 25 28
Stmt (46)
    on left: 29 30 31 32 33 34 35, on right: 28 32 33 34
DefList (47)
    on left: 36 37, on right: 11 25 37
Def (48)
    on left: 38, on right: 37
DecList (49)
    on left: 39 40, on right: 38 40
Dec (50)
    on left: 41 42, on right: 39 40
Exp (51)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62, on right: 29 31 32 33 34 42 43 44 45 46 47 48 49 50 51 52
    53 56 57 62 63 64
Args (52)
    on left: 63 64, on right: 54 63


state 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


state 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 13 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


state 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


state 8

   14 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 15 (Tag)


state 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


state 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 13

   21 FunDec: error . RP

    RP  shift, and go to state 20


state 14

   16 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 16 (VarDec)


state 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


state 17

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB error RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 7 (ExtDecList)


state 18

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 25
    LC     shift, and go to state 26

    CompSt  go to state 27


state 19

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


state 20

   21 FunDec: error RP .

    $default  reduce using rule 21 (FunDec)


state 21

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


state 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 23

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


state 24

   17 VarDec: VarDec LB . INT RB
   18       | VarDec LB . error RB

    error  shift, and go to state 37
    INT    shift, and go to state 38


state 25

   26 CompSt: error . RC

    RC  shift, and go to state 39


state 26

   25 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 30


state 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 28

   38 Def: Specifier . DecList SEMI

    ID  shift, and go to state 35

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


state 29

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 44


state 30

   37 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 45
    Def              go to state 30


state 31

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


state 32

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 46


state 33

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 47


state 34

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 48

    $default  reduce using rule 23 (VarList)


state 35

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


state 36

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


state 37

   18 VarDec: VarDec LB error . RB

    RB  shift, and go to state 49


state 38

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 50


state 39

   26 CompSt: error RC .

    $default  reduce using rule 26 (CompSt)


state 40

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 26
    NOT     shift, and go to state 57
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


state 41

   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB error RB
   41 Dec: VarDec .
   42    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 24
    ASSIGNOP  shift, and go to state 65

    $default  reduce using rule 41 (Dec)


state 42

   38 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 66


state 43

   39 DecList: Dec .
   40        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 39 (DecList)


state 44

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


state 45

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


state 46

   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB error RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 24 (ParamDec)


state 47

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


state 48

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 68
    ParamDec         go to state 34


state 49

   18 VarDec: VarDec LB error RB .

    $default  reduce using rule 18 (VarDec)


state 50

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


state 51

   26 CompSt: error . RC
   35 Stmt: error . SEMI
   61 Exp: error . RP

    SEMI  shift, and go to state 69
    RP    shift, and go to state 70
    RC    shift, and go to state 39


state 52

   59 Exp: INT .

    $default  reduce using rule 59 (Exp)


state 53

   60 Exp: FLOAT .

    $default  reduce using rule 60 (Exp)


state 54

   54 Exp: ID . LP Args RP
   55    | ID . LP RP
   58    | ID .

    LP  shift, and go to state 71

    $default  reduce using rule 58 (Exp)


state 55

   52 Exp: MINUS . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 73


state 56

   51 Exp: LP . Exp RP

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 74


state 57

   53 Exp: NOT . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 75


state 58

   31 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 76


state 59

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 77


state 60

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 78


state 61

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


state 62

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


state 63

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 26
    NOT     shift, and go to state 57
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 80
    Stmt      go to state 63
    Exp       go to state 64


state 64

   29 Stmt: Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . MUL Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID
   62    | Exp . LB error RB

    PLUS      shift, and go to state 81
    MINUS     shift, and go to state 82
    MUL       shift, and go to state 83
    DIV       shift, and go to state 84
    SEMI      shift, and go to state 85
    LB        shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91


state 65

   42 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 92


state 66

   38 Def: Specifier DecList SEMI .

    $default  reduce using rule 38 (Def)


state 67

   40 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 41
    DecList  go to state 93
    Dec      go to state 43


state 68

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


state 69

   35 Stmt: error SEMI .

    $default  reduce using rule 35 (Stmt)


state 70

   61 Exp: error RP .

    $default  reduce using rule 61 (Exp)


state 71

   54 Exp: ID LP . Args RP
   55    | ID LP . RP

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    RP     shift, and go to state 94
    NOT    shift, and go to state 57

    Exp   go to state 95
    Args  go to state 96


state 72

   61 Exp: error . RP

    RP  shift, and go to state 70


state 73

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . MUL Exp
   50    | Exp . DIV Exp
   52    | MINUS Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID
   62    | Exp . LB error RB

    MUL  shift, and go to state 83
    DIV  shift, and go to state 84
    LB   shift, and go to state 86
    DOT  shift, and go to state 91

    $default  reduce using rule 52 (Exp)


state 74

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . MUL Exp
   50    | Exp . DIV Exp
   51    | LP Exp . RP
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID
   62    | Exp . LB error RB

    PLUS      shift, and go to state 81
    MINUS     shift, and go to state 82
    MUL       shift, and go to state 83
    DIV       shift, and go to state 84
    RP        shift, and go to state 97
    LB        shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91


state 75

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . MUL Exp
   50    | Exp . DIV Exp
   53    | NOT Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID
   62    | Exp . LB error RB

    LB   shift, and go to state 86
    DOT  shift, and go to state 91

    $default  reduce using rule 53 (Exp)


state 76

   31 Stmt: RETURN Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . MUL Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID
   62    | Exp . LB error RB

    PLUS      shift, and go to state 81
    MINUS     shift, and go to state 82
    MUL       shift, and go to state 83
    DIV       shift, and go to state 84
    SEMI      shift, and go to state 98
    LB        shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91


state 77

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 99


state 78

   34 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 100


state 79

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


state 80

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


state 81

   47 Exp: Exp PLUS . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 101


state 82

   48 Exp: Exp MINUS . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 102


state 83

   49 Exp: Exp MUL . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 103


state 84

   50 Exp: Exp DIV . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 104


state 85

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


state 86

   56 Exp: Exp LB . Exp RB
   62    | Exp LB . error RB

    error  shift, and go to state 105
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 106


state 87

   43 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 107


state 88

   46 Exp: Exp RELOP . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    LP     shift, and go to state 56
    NOT    shift, and go to state 57

    Exp  go to state 108


state 89

   44 Exp: Exp AND . Exp
